--- a/app/index.html
+++ b/app/index.html
@@ -160,7 +160,7 @@
                             <div class="top-slider__item">
                                 <div class="top-slider__content">
                                     <h2 class="top-slider__title">
-                                        Пусть остальные позеленеют от зависти <span
+                                        Пусть остальные <br> позеленеют от зависти<span
                                             class="top-slider__title__subtitle">Распродажа зелени</span>
                                     </h2>
                                     <a class="link" href="#">
@@ -446,7 +446,7 @@
                                 </li>
                                 <li class="footer-top__contacts__item">
                                     <a href="#" class="footer-top__contacts__link">
-                                        <svg width="33" height="32" viewBox="0 0 33 32" fill="none">
+                                        <svg class="footer-top__icon" width="33" height="32" viewBox="0 0 33 32" fill="none">
                                             <g clip-path="url(#clip0_20_42)">
                                                 <path
                                                     d="M16.4486 7.78394C11.9427 7.78394 8.29486 11.4613 8.29486 15.9946C8.29486 20.5319 11.9467 24.2053 16.4486 24.2053C20.9545 24.2053 24.6024 20.5279 24.6024 15.9946C24.6024 11.4573 20.9506 7.78394 16.4486 7.78394ZM16.4486 21.3239C13.5237 21.3239 11.1562 18.9386 11.1562 15.9946C11.1562 13.0506 13.525 10.6653 16.4486 10.6653C19.3722 10.6653 21.741 13.0506 21.741 15.9946C21.7424 18.9386 19.3736 21.3239 16.4486 21.3239Z"
